@@ -1,4 +1,10 @@
 2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
+	* src/Dialog_Progress.cc: set a min. width for detailstree instead of
+	  deducing it from the textlength.
+	* src/VBox_VisualDisk.cc: small fix to reap 'lost' pixels.
+	
+2006-02-09 Bart Hakvoort <hakvoort@cvs.gnome.org>
 	
 	* include/Win_GParted.h,
 	  src/Win_GParted.cc: it shouldn't be possible to remove an extended
